Istio/02-Traffic_management/04-HTTPRedirect/gateway.yaml
# https://github.com/istio/istio/blob/master/samples/helloworld/helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-vs
spec:
  hosts:
    - "*"
  gateways:
    - helloworld-gateway
  http:
    - match:
        - uri:
            exact: /helloworld
      route:
        - destination:
            host: helloworld.default.svc.cluster.local
            port:
              number: 80
      rewrite:
        uri: "/"
    - name: to_https
      match:
        - uri:
            exact: /https
          scheme: http
      redirect:
        scheme: "https"
    - name: wikipedia
      match:
        - uri:
            exact: "/wiki"
      redirect:
        uri: "/"
        scheme: "https"
        authority: "en.wikipedia.org"
    - name: wikipedia_search
      match:
        - uri:
            prefix: "/wiki/"
      redirect:
        scheme: "https"
        authority: "en.wikipedia.org"
